[ADD] editProfile endpoint
